--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <link rel="stylesheet" href="css/calculator.css" />
 </head>
 <body>
+    <div class="calculator">
+        <div class="output">
+            output
+        </div>
+        <button class="clear-button">C</button>
+        <button class="backspace"> arrow </button>
 
+        <div class="numbers">
+            <button>0</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+        </div>
+        <div class="operands">
+            <button>%</button>
+            <button>x</button>
+            <button>-</button>
+            <button>+</button>
+            <button>=</button>
+        </div>
+    </div>
 </body>
 </html>
