--- a/index.html
+++ b/index.html
@@ -6,33 +6,26 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="css/calculator.css" />
 </head>
-<body>
-    <div class="calculator">
-        <div class="output">
-            output
-        </div>
-        <button class="clear-button">C</button>
-        <button class="backspace"> arrow </button>
-
-        <div class="numbers">
-            <button>0</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-        </div>
-        <div class="operands">
-            <button>%</button>
-            <button>x</button>
-            <button>-</button>
-            <button>+</button>
-            <button>=</button>
-        </div>
+<body class="calculator">
+    <div class="output">
+        output
     </div>
+    <button class="clear">C</button>
+    <button class="backspace"> arrow </button>
+    <button class="zero">0</button>
+    <button class="one">1</button>
+    <button class="two">2</button>
+    <button class="three">3</button>
+    <button class="four">4</button>
+    <button class="five">5</button>
+    <button class="six">6</button>
+    <button class="seven">7</button>
+    <button class="eight">8</button>
+    <button class="nine">9</button>
+    <button class="divide">%</button>
+    <button class="multiply">x</button>
+    <button class="substract">-</button>
+    <button class="add">+</button>
+    <button class="equal">=</button>
 </body>
 </html>
