add individua class operand for operations

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <button class="zero">0</button>
     </div>
     <div class="operands">
-        <button class="divide">%</button>
-        <button class="multiply">x</button>
-        <button class="substract">-</button>
-        <button class="add">+</button>
-        <button class="equal">=</button>
+        <button class="operand divide">%</button>
+        <button class="operand multiply">x</button>
+        <button class="operand substract">-</button>
+        <button class="operand add">+</button>
+        <button class="operand equal">=</button>
     </div>
 </body>
 </html>
