add html code for times, divide and right arrow

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div class="actions">
         <button class="clear">C</button>
-        <button class="backspace"> arrow </button>
+        <button class="backspace"> &rarr; </button>
     </div>
     <div class="numbers">
         <button>7</button>
@@ -27,8 +27,8 @@
         <button class="zero">0</button>
     </div>
     <div class="operands">
-        <button class="operand divide">%</button>
-        <button class="operand multiply">x</button>
+        <button class="operand divide">&divide;</button>
+        <button class="operand multiply">&times;</button>
         <button class="operand substract">-</button>
         <button class="operand add">+</button>
         <button class="operand equal">=</button>
