--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
         <button class="operand add">+</button>
         <button class="operand equal">=</button>
     </div>
+    <script src="./calculator.js"></script>
 </body>
 </html>
